Bug #9632 'strict' test fails with embedded server
Submitted: 5 Apr 2005 0:56 Modified: 9 May 2005 19:34
Reporter: Jim Winstead Email Updates:
Status: Closed
Category:libmysqld Severity:S2 (Serious)
Version:5.0 OS:
Assigned to: Alexey Botchkov Target Version:

[5 Apr 2005 0:56] Jim Winstead
Description:
The strict test fails with the embedded server, with the following error messages:

mysql_embedded: At line 23: query 'INSERT INTO t1 VALUES('2004-01-02'),('2004-0-31')'
succeeded - should have failed with errno 1292...
mysql_embedded: At line 25: query 'INSERT INTO t1 VALUES('2004-10-0')' succeeded - should
have failed with errno 1292...
mysql_embedded: At line 27: query 'INSERT INTO t1 VALUES('2004-09-31')' succeeded -
should have failed with errno 1292...
mysql_embedded: At line 29: query 'INSERT INTO t1 VALUES('2004-10-32')' succeeded -
should have failed with errno 1292...
mysql_embedded: At line 31: query 'INSERT INTO t1 VALUES('2003-02-29')' succeeded -
should have failed with errno 1292...
mysql_embedded: At line 33: query 'INSERT INTO t1 VALUES('2004-13-15')' succeeded -
should have failed with errno 1292...
mysql_embedded: At line 35: query 'INSERT INTO t1 VALUES('0000-00-00')' succeeded -
should have failed with errno 1292...
mysql_embedded: At line 38: query 'INSERT INTO t1 VALUES ('59')' succeeded - should have
failed with errno 1292...
mysql_embedded: At line 45: query 'INSERT INTO t1 VALUES('2004-0-30')' succeeded - should
have failed with errno 1292...
mysql_embedded: At line 47: query 'INSERT INTO t1
VALUES('2004-01-04'),('2004-0-31'),('2004-01-05')' succeeded - should have failed with
errno 1292...
mysql_embedded: At line 52: query 'INSERT INTO t1 VALUES('0000-00-00')' succeeded -
should have failed with errno 1292...
mysql_embedded: At line 56: query 'INSERT INTO t1 VALUES ('2004-2-30')' succeeded -
should have failed with errno 1292...
mysql_embedded: At line 68: query 'CREATE TABLE t1 (col1 date) engine=myisam' failed:
1050: Table 't1' already exists

How to repeat:
mysql-test-run --embedded-server strict
[9 May 2005 11:27] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/internals/24728
[9 May 2005 19:34] Alexey Botchkov
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.

If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information 
about accessing the source trees is available at
    http://www.mysql.com/doc/en/Installing_source_tree.html