Fix for bug #9632 (strict.test fails in -embedded-server mode)